@@ -1,0 +1,84 @@
+## SECTION=bootloader
+
+menuconfig U_BOOT
+	select BOOTLOADER
+	prompt "U-Boot                        "
+	bool
+	select DTC	if ARCH_MICROBLAZE
+
+if U_BOOT
+
+config U_BOOT_VERSION
+	string
+	default 1.2.0
+	prompt "U-Boot version"
+	help
+	  Enter the Uboot version you want to build. Usally something like "1.2.0"
+
+config U_BOOT_MD5
+	string
+	prompt "U-Boot source md5"
+
+config U_BOOT_PROMPT
+	string
+	prompt "uboot prompt"
+	default "uboot> "
+	help
+	  Specify the uboot prompt here, be careful at this one. Wrong value can cause malfunction
+	  on the host side when using ptxdist's test and autosetup features.
+	  The value is used in regular expressions to communicate with the target via serial line.
+
+config U_BOOT_SERIES
+	prompt "patch series file"
+	string
+	default "series"
+	help
+	  This entry specifies a patch series file which has to live in
+	  the kernel patches directory:
+
+	  The series file contains lines with names of patch files which
+	  are then being applied to the kernel.
+
+config U_BOOT_CONFIG
+	string
+	prompt "U-Boot config target"
+	help
+	  The U-Boot make config target. Usually something like
+	  "yourbox_config". See Uboot's main Makefile for possible
+	  configuration targets.
+
+comment "target install"
+
+config U_BOOT_INSTALL_SREC
+	prompt "install u-boot.srec"
+	bool
+	help
+	  Installing the U-Boot srec hexfile into platform image directory.
+
+config U_BOOT_INSTALL_ELF
+	prompt "install u-boot.elf"
+	bool
+	help
+	  Installing the U-Boot ELF binary into platform image directory.
+
+config U_BOOT_INSTALL_MLO
+	prompt "install MLO"
+	bool
+	depends on !X_LOAD
+	help
+	  Installing the U-Boot SPL ("MLO") binary needed for OMAP CPUs into platform
+	  image directory.
+
+if U_BOOT_INSTALL_MLO
+
+config U_BOOT_INSTALL_U_BOOT_IMG
+	prompt "install u-boot.img"
+	bool
+	help
+	  Installing the u-boot image with header ("u-boot.img") which is executed
+	  by u-boot SPL ("MLO") into platform image directory.
+
+endif
+
+endif
+
